Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)

* Improvements:

Improved Debug Console: better refresh, dynamic width??
Improved Debug CPU: 
- added (hl), (de), (bc)
- added continuos speed 4 (run 10 opcodes every time, with no pause)

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)

* Fixes:

Fixed +3 disk (and CPC6128?) (PD765) emulation: TODO: add more details here


* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.2 - Hysteria edition. 26 October 2022

* New things added:

Added configurable icons to the ZX Desktop. These icons can:
-Open windows, for example View Sprites
-Trigger actions, like Reset
-File links, these are linked to tapes or snapshots on your disk drive
-There are other special icons, like Trash Can
These icons opens a whole new world on ZEsarUX, so the ZX Desktop is becoming a Full Desktop environment :)

Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C
-Microdigital TK83
-Microdigital TK85
-Microdigital TK95 Spanish
-Timex Computer 2048
-Timex Computer 2068
-Timex Sinclair 1000
-Timex Sinclair 1500

Added Copy Interfaces emulation:
-Defcon
-Dinamid3
-Hilow Barbanegra
-Interface007
-Microhobby Pokeador Automatico
-Phoenix
-Ramjet
-Spec-Mate
-Transtape

Added Dinamic SD1 emulation
Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068, MK14, Chrome, Prism, Chloe, Sam Coupe
Added path setting where to download files from the speccy and zx81 online browser
Added disk image browsing from storage MMC/IDE menus
Added PZX load support as standard tape
Added TAP to PZX converter